--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clear": "rm -rf dist node_modules package-lock.json",
+    "clear": "rm -rf dist node_modules package-lock.json build",
     "refresh": "npm run clear && npm install && npm run build",
     "dev": "nodemon src/index.ts",
     "start": "node build/index.js",
@@ -26,13 +26,13 @@
   },
   "homepage": "https://github.com/kronis/coop#readme",
   "devDependencies": {
-    "@eslint/js": "^8.57.1",
+    "@eslint/js": "^9.12.0",
     "@tsconfig/node22": "^22.0.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.12.0",
     "globals": "^15.11.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^7.18.0"
+    "typescript-eslint": "^8.8.1"
   }
 }
