--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "nodemon src/index.ts",
     "start": "node build/index.js",
     "build": "tsc",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "format": "prettier . --write",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -30,7 +32,10 @@
     "@tsconfig/node22": "^22.0.0",
     "eslint": "^9.12.0",
     "globals": "^15.11.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "nodemon": "^3.1.7",
+    "prettier": "3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.1"
