--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "extends": "@tsconfig/node22/tsconfig.json",
   "compilerOptions": {
     /* Modules */
-    "rootDir": "src" /* Specify the root folder within your source files. */,
+    // "rootDir": "./src" /* Specify the root folder within your source files. */,
 
     /* Emit */
     "outDir": "build" /* Specify an output folder for all emitted files. */
