--- a/fetcher/package.json
+++ b/fetcher/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coop",
+  "name": "coop-fetcher",
   "version": "1.0.0",
   "description": "Interview case for FTE role.",
   "main": "index.js",
@@ -13,7 +13,7 @@
     "build": "tsc",
     "lint": "eslint .",
     "format": "prettier . --write",
-    "prepare": "husky"
+    "prepare": "cd .. && husky fetcher/.husky"
   },
   "repository": {
     "type": "git",
@@ -45,6 +45,6 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.8.1"
+    "typescript-eslint": "^8.9.0"
   }
 }
