--- a/consumer/package.json
+++ b/consumer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coop-fetcher",
+  "name": "coop-consumer",
   "version": "1.0.0",
   "description": "Interview case for FTE role.",
   "main": "index.js",
@@ -13,7 +13,7 @@
     "build": "tsc",
     "lint": "eslint .",
     "format": "prettier . --write",
-    "prepare": "cd .. && husky fetcher/.husky"
+    "prepare": "cd .. && husky consumer/.husky"
   },
   "repository": {
     "type": "git",
@@ -33,7 +33,9 @@
     "@tsconfig/node22": "^22.0.0",
     "@types/amqplib": "^0.10.5",
     "@types/chai": "^5.0.0",
+    "@types/express": "^5.0.0",
     "@types/mocha": "^10.0.9",
+    "@types/ws": "^8.5.12",
     "chai": "^5.1.1",
     "eslint": "^9.12.0",
     "globals": "^15.11.0",
@@ -43,12 +45,15 @@
     "nock": "^14.0.0-beta.15",
     "nodemon": "^3.1.7",
     "prettier": "3.3.3",
+    "terser": "^5.36.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.9.0"
   },
   "dependencies": {
-    "amqplib": "^0.10.4"
+    "amqplib": "^0.10.4",
+    "express": "^4.21.1",
+    "ws": "^8.18.0"
   }
 }
