--- a/consumer/tsconfig.json
+++ b/consumer/tsconfig.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@tsconfig/node22/tsconfig.json",
   "compilerOptions": {
-    "outDir": "build" /* Specify an output folder for all emitted files. */
+    "outDir": "build" /* Specify an output folder for all emitted files. */,
   },
   "include": ["src"],
   "exclude": ["build/**/*", "node_modules/**/*"]
