Update test for Fetcher

--- a/fetcher/tsconfig.json
+++ b/fetcher/tsconfig.json
@@ -2,8 +2,8 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@tsconfig/node22/tsconfig.json",
   "compilerOptions": {
-    "outDir": "build" /* Specify an output folder for all emitted files. */
+    "outDir": "build" /* Specify an output folder for all emitted files. */,
   },
-  "include": ["src"],
+  "include": ["src", "test"],
   "exclude": ["build/**/*", "node_modules/**/*"]
 }
