--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,9 +15,6 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: fetcher
 
     strategy:
       matrix:
@@ -31,6 +28,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+      - name: Clean install
+        run: npm ci
+        working-directory: fetcher
+      - name: Build
+        run: npm run build --if-present
+        working-directory: fetcher
+      - name: Test
+        run: npm test
+        working-directory: fetcher
