Add tests for consumer as well

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,6 +23,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
@@ -38,3 +39,19 @@ jobs:
       - name: Test
         run: npm test
         working-directory: fetcher
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+          cache-dependency-path: consumer/package-lock.json
+      - name: Clean install
+        run: npm ci
+        working-directory: consumer
+      - name: Build
+        run: npm run build --if-present
+        working-directory: consumer
+      - name: Test
+        run: npm test
+        working-directory: consumer
