--- a/fetcher/package.json
+++ b/fetcher/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --timeout 20000",
     "clear": "rm -rf dist node_modules package-lock.json build",
     "refresh": "npm run clear && npm install && npm run build",
     "dev": "tsx watch src/index.ts",
